--- a/src/sass/base/_deck.scss
+++ b/src/sass/base/_deck.scss
@@ -1,20 +1,36 @@
+// .projectsContainer{
+//   // background-color: yellow;
+//   height: 100vh;
+//   margin-left: 10vw;
+// }
+
 .projectsContainer{
     // background-color: yellow;
-    height: 100vh;
-    margin-left: 15vw;
+    // height: 100vh;
+    // margin-left: 15vw;
+    // display: flex;
+    // flex-direction: row;
+    // justify-content:space-evenly;
+    
+    margin-left: 10vw;
+    color: white;
     display: flex;
     flex-direction: row;
-    justify-content:space-evenly;
-    // align-content: space-around;
-    // margin-right: 10vw;
+    justify-content: center;
+    align-content: space-around;
+    height: 100vh;
+    align-items:center;
+    margin-bottom: 5vh;
     
   
 }
 
 .deckCont{
- width: 50vw;
+ width: 40vw;
  margin-left: 10vw;
   // width: 300px;
+  // display: flex;
+  // justify-items: center;
 }
 
 .imageSwipe{
@@ -23,10 +39,10 @@
   display: flex;
   justify-items: center;
   // right: 0px;
-  height: 50vh;
-  max-width: 20vw;
+  height: fit-content;
+  // width: 20vw;
   // height: 50vh;
-  margin-left: 10vw;
+  margin-left: 5vw;
  
 }
    
@@ -153,9 +169,7 @@ padding: 0 .5em;
 
   .swipe{
     // position: relative;
-    // left: 30%;
-    // bottom: 20vh;
-    // transform: translate(-50%, -50%);
+    
     font-family: Blackboxcodedesign;
     
   }
