--- a/src/sass/base/_skills.scss
+++ b/src/sass/base/_skills.scss
@@ -3,6 +3,7 @@
     margin-left: 10vw;
     padding-right: 7vw;
     // background-color: brown;
+    margin-top: 3vh;
     padding-top: 4vh;
     padding-left: 4vw;
     display: flex;
